디자인 수정

--- a/src/main/resources/templates/fragments/template.html
+++ b/src/main/resources/templates/fragments/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns="http://www.w3.org/1999/html">
@@ -15,7 +15,7 @@
 <div class="container">
   <!-- 헤더 -->
   <header class="header">
-    <h1>관리자 페이지</h1>
+
   </header>
 
   <!-- 사이드 메뉴 -->
