--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -7,8 +7,8 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #121212;  /* 어두운 배경색 */
-    color: #fff;  /* 기본 텍스트 색상: 흰색 */
+    background-color: #f9fafb;  /* 어두운 배경색 */
+    color: #1f2937;  /* 기본 텍스트 색상: 흰색 */
     line-height: 1.6;
 }
 
@@ -19,34 +19,17 @@ body {
     height: 100vh;
 }
 
-/* 헤더 */
-.header {
-    background-color: #1f1f1f;  /* 어두운 회색 */
-    color: #fff;
-    padding: 5px;
-    text-align: center;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* 화려한 그림자 효과 */
-}
-
-.header h1 {
-    font-size: 2rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #fff;
-}
-
 /* 사이드 메뉴 */
 .sidebar {
-    background-color: #222;  /* 더 어두운 회색 */
-    color: #fff;
+    background-color: #ffffff;
+    color: #1f2937;
     width: 250px;
     padding: 20px;
     position: fixed;
     top: 60px;  /* 헤더 아래에 위치 */
     left: 0;
     bottom: 0;
-    box-shadow: 4px 0 15px rgba(0, 0, 0, 0.3); /* 화려한 그림자 추가 */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 화려한 그림자 추가 */
 }
 
 .sidebar ul {
@@ -58,19 +41,21 @@ body {
 }
 
 .sidebar ul li a {
-    color: #fff;
+    color: #1f2937;
+    background-color: #f3f4f6;
     text-decoration: none;
     font-size: 14px;
     display: block;
     padding: 10px 15px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease, padding-left 0.3s ease;
+    border-radius: 0.5rem;
+    transition: background-color 0.2s ease, padding-left 0.3s ease;
 }
 
 .sidebar ul li a:hover {
-    background-color: #fff;
-    color: #121212;
+    background-color: #e0e7ff;
+    color: #4f46e5;
     padding-left: 25px; /* 호버 시 메뉴 항목 왼쪽 여백 증가 */
+    font-weight: 600;
 }
 
 /* 본문 */
@@ -79,9 +64,9 @@ body {
     padding: 20px;
     flex: 1;
     background-color: #fff;  /* 흰색 배경 */
-    color: #121212;  /* 텍스트 색상: 어두운 텍스트 */
-    border-radius: 8px;  /* 모서리 둥글게 */
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);  /* 화려한 그림자 */
+    color: #1f2937;  /* 텍스트 색상: 어두운 텍스트 */
+    border-radius: 0.75rem;  /* 모서리 둥글게 */
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);  /* 화려한 그림자 */
 }
 
 .main-content h2 {
@@ -114,4 +99,15 @@ body {
 .footer p {
     margin: 0;
     font-weight: 500;
+}
+.button {
+    background-color: #4f46e5;
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 0.375rem;
+    font-weight: 600;
+    transition: background-color 0.3s;
+}
+.button:hover {
+    background-color: #4338ca;
 }
