--- a/src/main/resources/templates/event/UnapprovedEvents.html
+++ b/src/main/resources/templates/event/UnapprovedEvents.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/template}">
 <head>
     <meta charset="UTF-8">
     <title>관리자 페이지</title>
@@ -8,7 +11,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
-      background-color: #121212;  /* 어두운 배경 */
+      background-color: #ffffff;  /* 어두운 배경 */
       color: #fff;  /* 텍스트 색상: 흰색 */
       display: flex;
     }
@@ -91,11 +94,11 @@
 <body>
 
 <div th:replace="~{fragments/aside :: sidebar}"></div>
-
-<div class="container">
-  <h1>비활성화 이벤트 리스트</h1>
-  <table>
-    <thead>
+<main layout:fragment="content">
+  <div class="container my-4">
+  <h2>비활성화 이벤트 리스트</h2>
+    <table class="table table-bordered table-hover text-center align-middle">
+      <thead class="table-dark">
     <tr>
       <th>이벤트 ID</th>
       <th>카테고리 ID</th>
