--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -51,11 +51,6 @@
     <li><a href="/user/readInactiveUsers.do">비활성 유저 조회</a></li>
   </ul>
 
-  <h2> 위젯 관리</h2>
-  <ul>
-    <li><a href="/widgets/readAll.do">위젯 설정</a></li>
-  </ul>
-
   <h2> 이벤트 관리</h2>
   <ul>
     <li><a href="/event/readUnapprovedEvents.do">승인 대기 이벤트</a></li>
@@ -78,10 +73,14 @@
     <li><a href="/postingComments/deactivated">비활성 댓글</a></li>
   </ul>
 
+  <h2> 위젯 관리</h2>
+  <ul>
+    <li><a href="/widgets/readAll.do">위젯 설정</a></li>
+  </ul>
+
   <h2> 문의 관리</h2>
   <ul>
     <li><a href="/inquires/list">문의내역 목록</a></li>
-    <li><a href="#">문의 처리 현황</a></li>
   </ul>
 
   <ul>
