--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <main layout:fragment="content">
-        <h2>북마크 처럼</h2>
-        <p>여기에 관리자가 검색창 놓고, 필요한 기능들을 블록으로 만들면 보기 편하지 않을까</p>
+        <h2>관리자 페이지 입니다.</h2>
     </main>
 
 </body>
