--- a/src/main/resources/templates/posting/reported.html
+++ b/src/main/resources/templates/posting/reported.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/template}">
 <head>
     <meta charset="UTF-8">
     <title>관리자 페이지</title>
@@ -87,11 +90,11 @@
 </style>
 <body>
 <div th:replace="~{fragments/aside :: sidebar}"></div>
-
-<div class="container">
-    <h1>신고된 게시글 목록</h1>
-    <table>
-        <thead>
+<main layout:fragment="content">
+    <div class="container my-4">
+    <h2>신고된 게시글 목록</h2>
+        <table class="table table-bordered table-hover text-center align-middle">
+            <thead class="table-dark">
         <tr>
             <th>작성일</th>
             <th>게시글 ID</th>
@@ -110,16 +113,17 @@
                 <form th:action="@{/posting/deactivate}" method="post">
                     <input type="hidden" name="postId" th:value="${post.postId}"/>
                     <input type="text" name="deletedReason" placeholder="삭제 사유" required/>
-                    <button type="submit">비활성화</button>
+                    <button type="submit" class="btn btn-sm btn-outline-danger">비활성화</button>
                 </form>
                 <form th:action="@{/posting/reactivate}" method="post" style="margin-top: 5px;">
                     <input type="hidden" name="postId" th:value="${post.postId}"/>
-                    <button type="submit">복구</button>
+                    <button type="submit" class="btn btn-sm btn-outline-primary">복원</button>
                 </form>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
+</main>
 </body>
 </html>
