--- a/src/main/resources/templates/postingComments/deactivated.html
+++ b/src/main/resources/templates/postingComments/deactivated.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/template}">
 <head>
   <meta charset="UTF-8">
   <title>관리자 페이지</title>
@@ -87,30 +90,31 @@
 </style>
 <body>
 <div th:replace="~{fragments/aside :: sidebar}"></div>
+<main layout:fragment="content">
+  <div class="container my-4">
+<h2>삭제된 댓글 목록</h2>
 
-<div class="container">
-<h1>삭제된 댓글 목록</h1>
-
-<table>
-  <thead>
-  <tr>
-    <th>댓글 ID</th>
-    <th>작성자</th>
-    <th>내용</th>
-    <th>삭제일</th>
-    <th>삭제 사유</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="comment : ${comments}">
-    <td th:text="${comment.commentId}"></td>
-    <td th:text="${comment.userId}"></td>
-    <td th:text="${comment.contents}"></td>
-    <td th:text="${comment.deletedAt}"></td>
-    <td th:text="${comment.deletedReason}"></td>
-  </tr>
-  </tbody>
-</table>
+    <table class="table table-bordered table-hover text-center align-middle">
+      <thead class="table-dark">
+        <tr>
+          <th>댓글 ID</th>
+          <th>작성자</th>
+          <th>내용</th>
+          <th>삭제일</th>
+          <th>삭제 사유</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr th:each="comment : ${comments}">
+          <td th:text="${comment.commentId}"></td>
+          <td th:text="${comment.userId}"></td>
+          <td th:text="${comment.contents}"></td>
+          <td th:text="${comment.deletedAt}"></td>
+          <td th:text="${comment.deletedReason}"></td>
+        </tr>
+      </tbody>
+    </table>
 </div>
+</main>
 </body>
 </html>
