--- a/src/main/resources/templates/postingComments/reported.html
+++ b/src/main/resources/templates/postingComments/reported.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/template}">
 <head>
   <meta charset="UTF-8">
   <title>관리자 페이지</title>
@@ -87,41 +90,42 @@
 </style>
 <body>
 <div th:replace="~{fragments/aside :: sidebar}"></div>
+<main layout:fragment="content">
+  <div class="container my-4">
+  <h2>신고된 댓글 목록</h2>
 
-<div class="container">
-<h1>신고된 댓글 목록</h1>
+    <table class="table table-bordered table-hover text-center align-middle">
+      <thead class="table-dark">
+        <tr>
+          <th>댓글 ID</th>
+          <th>작성자</th>
+          <th>내용</th>
+          <th>작성일</th>
+          <th>관리자 조치</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr th:each="comment : ${comments}">
+          <td th:text="${comment.commentId}"></td>
+          <td th:text="${comment.userId}"></td>
+          <td th:text="${comment.contents}"></td>
+          <td th:text="${comment.createdAt}"></td>
+          <td>
+            <form th:action="@{/postingComments/deactivate}" method="post" style="display:inline;">
+              <input type="hidden" name="commentId" th:value="${comment.commentId}"/>
+              <input type="text" name="deletedReason" placeholder="삭제 사유" required/>
+              <button type="submit" class="btn btn-sm btn-outline-danger">삭제</button>
+            </form>
 
-<table>
-  <thead>
-  <tr>
-    <th>댓글 ID</th>
-    <th>작성자</th>
-    <th>내용</th>
-    <th>작성일</th>
-    <th>관리자 조치</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="comment : ${comments}">
-    <td th:text="${comment.commentId}"></td>
-    <td th:text="${comment.userId}"></td>
-    <td th:text="${comment.contents}"></td>
-    <td th:text="${comment.createdAt}"></td>
-    <td>
-      <form th:action="@{/postingComments/deactivate}" method="post" style="display:inline;">
-        <input type="hidden" name="commentId" th:value="${comment.commentId}"/>
-        <input type="text" name="deletedReason" placeholder="삭제 사유" required/>
-        <button type="submit">삭제</button>
-      </form>
-
-      <form th:action="@{/postingComments/reactivate}" method="post" style="display:inline;">
-        <input type="hidden" name="commentId" th:value="${comment.commentId}"/>
-        <button type="submit">복원</button>
-      </form>
-    </td>
-  </tr>
-  </tbody>
-</table>
-</div>
+            <form th:action="@{/postingComments/reactivate}" method="post" style="display:inline;">
+              <input type="hidden" name="commentId" th:value="${comment.commentId}"/>
+              <button type="submit" class="btn btn-sm btn-outline-primary">복원</button>
+            </form>
+          </td>
+        </tr>
+      </tbody>
+      </table>
+    </div>
+  </main>
 </body>
 </html>
