--- a/src/main/resources/templates/user/searchResults.html
+++ b/src/main/resources/templates/user/searchResults.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/template}">
 <head>
   <title>검색 결과</title>
   <link rel="stylesheet" href="styles.css">
   <style>
     /* 전체 배경을 검정색으로 설정 */
     body {
-      background-color: black;
-      color: white;
+      background-color: #ffffff;
+      color: #1a1a1a;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
@@ -37,7 +41,6 @@
 
     /* 링크 스타일 */
     a {
-      color: #fff;
       text-decoration: none;
     }
 
@@ -56,10 +59,13 @@
 </head>
 
 <body>
-<h1>회원 검색 결과</h1>
+<div th:replace="~{fragments/aside :: sidebar}"></div>
+<main layout:fragment="content">
+  <div class="container my-4">
+<h2>회원 검색 결과</h2>
 
-<table>
-  <thead>
+<table class="table table-bordered table-hover text-center align-middle">
+  <thead class="table-dark">
   <tr>
     <th>아이디</th>
     <th>이름</th>
@@ -79,5 +85,7 @@
   </tr>
   </tbody>
 </table>
+  </div>
+</main>
 </body>
 </html>
